@@ -1,0 +1,6 @@
+procedure t is
+  a : array (1..1) of exception; -- exception arrays are not allowed
+begin
+  null;
+end t;
+
